--- a/ecmmerce-website/src/index.css
+++ b/ecmmerce-website/src/index.css
@@ -7,5 +7,31 @@
      width: 60px;
      /* height: 30px; */
 
-   
+   @keyframes fade-in {
+  from { opacity: 0; transform: translateY(10px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+@keyframes slide-up {
+  from { opacity: 0; transform: translateY(30px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+.animate-fade-in {
+  animation: fade-in 0.8s ease-in-out forwards;
+}
+
+.animate-slide-up {
+  animation: slide-up 0.8s ease-in-out forwards;
+}
+
+
+/* @keyframes fade-in {
+  from { opacity: 0; transform: translateY(10px); }
+  to { opacity: 1; transform: translateY(0); }
+} */
+/* .animate-fade-in {
+  animation: fade-in 0.8s ease-in-out forwards;
+} */
+
 
