--- a/ecmmerce-website/src/index.css
+++ b/ecmmerce-website/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Michroma&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,6 +7,12 @@
      font-family: "BBH Sans Bogle", sans-serif;
      width: 60px;
      /* height: 30px; */
+
+
+*{
+      font-family: "Michroma", sans-serif;
+}
+
 
    @keyframes fade-in {
   from { opacity: 0; transform: translateY(10px); }
